--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,3 +3,4 @@
   <%= @article.body %>
 </p>
 <%= link_to "<< Back to Articles List", articles_path %>
+<%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
