--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,3 +4,4 @@
 </p>
 <%= link_to "<< Back to Articles List", articles_path %>
 <%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
+<%= link_to "edit", edit_article_path(@article) %>
