--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -18,7 +18,7 @@
   </p>
   <p>
     <% if @article.image.exists? %>
-      <%= image_tag @article.image.url %>
+      <%= image_tag @article.image.url(:thumb) %>
     <% end %>
     <%= f.label :image, "Attach an Image" %><br>
     <%= f.file_field :image %>
