--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,6 +4,9 @@
   <% @articles.each do |article| %>
     <li>
       <%= link_to article.title, article_path(article), class: 'article_title', id: "article_#{article.id}" %>
+      <% if article.image.exists? %>
+        <%= image_tag article.image.url(:tiny) %>
+      <% end %>
     </li>
   <% end %>
 </ul>
