--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -6,6 +6,7 @@
   <% end %>
 </ul>
 <br>
-<%= link_to "delete this tag", tag_path(@tag), method: :delete, data: {confirm: "Really delete the tag?"} %>
-<br>
+<% if logged_in? %>
+  <%= link_to "delete this tag", tag_path(@tag), method: :delete, data: {confirm: "Really delete the tag?"} %><br>
+<% end %>
 <%= link_to "<< Back to Tags List", tags_path %>
